FIx spacing

--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -7,6 +7,7 @@
 	font-size: 1rem;
 	text-align: center;
 	/* height: 250px; */
+	margin-bottom: 2rem;
 	overflow: hidden;
 }
 
